feat: setup drizzle and db

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,9 @@
 NODE_ENV=development
-DATABASE_URL=postgresql://alex:AbC123dEf@ep-cool-darkness-123456.us-east-2.aws.neon.tech/dbname
+DATABASE_HOST=localhost
+DATABASE_USER=myuser
+DATABASE_PASSWORD=mysecretpassword
+DATABASE_NAME=mydb
+DATABASE_PORT=5432
 PORT=3000
-JWT_SECRET=averysecretthing
+JWT_SECRET=averysecretkey
 JWT_EXPIRES_IN=7d
