--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf dist && echo \"Cleaned dist directory\"",
-    "dev": "bun --watch --smol run server.ts",
+    "dev:bun": "bun --watch --smol run server.ts",
+    "dev": "nodemon",
     "build": "npm run clean && tsc && tsc-alias",
     "start": "node dist/server.js"
   },
@@ -47,7 +48,9 @@
     "@types/node": "^22.9.3",
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.28.1",
+    "nodemon": "^3.1.7",
     "rimraf": "^6.0.1",
+    "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
