--- a/package.json
+++ b/package.json
@@ -47,8 +47,15 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.9.3",
     "@types/pg": "^8.11.10",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "drizzle-kit": "^0.28.1",
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.7",
     "nodemon": "^3.1.7",
+    "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
