--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "type": "module",
   "author": "Suryansh Mishra",
   "license": "ISC",
+  "prepare": "husky install",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "chalk": "^5.3.0",
