--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev:bun": "bun --watch --smol run server.ts",
     "dev": "nodemon",
     "build": "npm run clean && tsc && tsc-alias",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "prepare": "husky"
   },
   "keywords": [
     "boilerplate",
@@ -40,6 +41,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
@@ -48,12 +50,8 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.9.3",
     "@types/pg": "^8.11.10",
-    "@typescript-eslint/eslint-plugin": "^8.15.0",
-    "@typescript-eslint/parser": "^8.15.0",
     "drizzle-kit": "^0.28.1",
     "eslint": "^9.15.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.7",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
@@ -61,6 +59,7 @@
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.0",
+    "typescript-eslint": "^8.15.0"
   }
 }
