--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose": "^8.8.1",
     "morgan": "^1.10.0",
     "pg": "^8.13.1",
+    "redis": "^4.7.0",
     "winston": "^3.17.0",
     "zod": "^3.23.8"
   },
